# Just-edTech-BE

./: .dockerbuildignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  build.sh  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  init.sql  pyproject.toml  quality_check.sh  seed_database.py  test_weasyprint_sample.py
.claude/rules/: api-endpoints.md  database-patterns.md  database-rules.md  dependency-injection.md  repository-pattern.md  service-layer.md  strategy-pattern.md
.cursor/rules/: api-rules.mdc  backend-core-rules.mdc  code-quality-rules.mdc  error-handling.mdc  factory-pattern.mdc  fastapi-architecture.mdc  gitops-rules.mdc  pydantic-schemas.mdc  type-safety.mdc
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 01773233c655_remove_api_key_secret.py  1ff7c73a4a52_add_images_to_messages.py  20251103_000000_create_postgres_extensions.py  20251104_initial_complete_schema.py  20251110_171948_rename_tenant_configs_to_chatbot_configs.py  20251110_182730_add_config_version_history.py  20251111_121007_remove_redundant_config_columns.py  20251112_fix_migration_issues.py  20251113_184044_populate_name_fields_in_config_history.py  20260112_153917_add_image_captions_table.py  20260306_000001_add_document_intelligence_columns.py  20260306_000002_add_summarizing_to_processingstage.py  20260311_000001_add_page_number_to_citations.py  20260618_000001_add_heatmap_tables.py  69375034d8ae_add_heatmap_keywords_table.py  7336236c2751_remove_tenant_id_from_llm_models.py
alembic/versions_backup/: 04d537f99d07_add_document_processing.py  0ccc8288ae0a_sync_models_to_erd.py  20250108_add_upload_batches.py  20251006_160001_bootstrap_legacy_core_tables.py  20251006_161000_add_conversation_documents_table.py  20251006_174701_add_chat_functionality.py  20251014_add_tenant_config_perf_knobs.py  20251015_add_signup_verification_columns.py  20251015_add_signups_table.py  20251016_add_logo_url_to_tenants.py  20251017_add_daily_token_usage.py  20251104_initial_complete_schema.py  40298b45c576_merge_upload_batches_with_main_branch.py  45663db3b64d_merge_migration_heads.py  (+11 more)
app/: celery_app.py  main.py
app/api/: api.py
docs/: BACKGROUND_WORKERS_SETUP.md  DOCUMENT_INGESTION_API.md  DOCUMENT_INGESTION_ARCHITECTURE.md  QDRANT_SETUP.md  TOKEN_BILLING_SYSTEM.md
quality_checks/: quality_check.py  quality_check_simple.py  run_quality_checks.py
scripts/: add_user.py  clear_vectors.py  create_user.py  regression_test.py  seed_county_district_mapping.py  seed_heatmap_keywords.py  seed_roles.py  setup_model_pricing.py  test_qdrant.py
storage/: raft_state.json
tests/: test_conversation_report.py  test_filename_sanitization.py  test_main.py
(+164 files in other folders)
