[tool.poetry]
name = "just-edtech"
version = "1.0.0"
description = "A modern, scalable FastAPI-based backend for Retrieval-Augmented Generation (RAG)"
authors = ["Aubergine <hello@aubergine.co>"]
# readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
langchain = "^0.2"
langgraph = ">=0.2.0"
langgraph-checkpoint-postgres = "*"
langchain-openai = "*"
langsmith = ">=0.1.17,<0.2.0"
numpy = "^1.25.2"
openai = "^1.108.0"
bcrypt = "==4.0.1"
redis = "^5.0.1"
qdrant-client = "^1.7.0"
pypdf2 = "^3.0.0"
pymupdf = "^1.23.0"
python-docx = "^1.1.0"
pillow = "^10.0.0"
opencv-python-headless = "^4.8.0"
aioboto3 = "^15.2.0"
celery = {extras = ["redis"], version = "^5.5.3"}
flower = "^2.0.1"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"
html2text = "^2024.2.26"
openpyxl = "*"
weasyprint = "^63.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.6"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "alembic",
    "chroma_db",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py312']
include = '^app/.*\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
  | chroma_db
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

